--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,4 @@
 URL = "https://www.wg-gesucht.de/1-zimmer-wohnungen-in-Munchen.90.1.1.0.html"
 LOGIN_EMAIL_USERNAME = ""
 LOGIN_PASSWORD = ""
-TEMPLATE_MESSAGE = "
-"
+TEMPLATE_MESSAGE = ""
