--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
+amqp==5.1.1
 beautifulsoup4==4.11.1
-black==22.6.0
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.6.15
 charset-normalizer==2.1.1
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+Flask==2.2.2
+greenlet==1.1.3
 idna==3.3
-mypy-extensions==0.4.3
-pathspec==0.9.0
-platformdirs==2.5.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kombu==5.2.4
+MarkupSafe==2.1.1
+prompt-toolkit==3.0.30
+python-dotenv==0.20.0
+pytz==2022.2.1
 requests==2.28.1
+six==1.16.0
 soupsieve==2.3.2.post1
-tomli==2.0.1
+SQLAlchemy==1.4.40
 urllib3==1.26.12
+vine==5.0.0
+wcwidth==0.2.5
+Werkzeug==2.2.2
