--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ requests==2.28.1
 six==1.16.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.40
+SQLAlchemy-Utils==0.38.3
 urllib3==1.26.12
 vine==5.0.0
 wcwidth==0.2.5
