now available on tests.pypi.org

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,3 @@
-LOGIN_EMAIL_USERNAME = ""
-LOGIN_PASSWORD = ""
-TEMPLATE_MESSAGE = ""
-TG_CHAT_ID=""
-TG_API_KEY=""   
+WG_GESUCHT_USERNAME = ""
+WG_GESUCHT_PASSWORD = ""
+WG_GESUCHT_TEMPLATE_MESSAGE = ""
